# vulkan-triangel

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/shaders/: shader.frag  shader.vert
